# CJ-Coin-GUI-final

./: README.md  package.json
src/: app.css
src-tauri/: .gitignore  Cargo.toml  key_data.txt  tauri.conf.json
src-tauri/src/: aes_key_data.json  api.rs  crypto_utils.rs  key_pair_data.json  lib.rs  main.rs
src-tauri/src/backup/: network.rs  utils.rs
src-tauri/tests/: crypto_tests.rs
src/lib/: api.ts  crypto.ts
src/lib/store/: filePath.ts  password.ts  seedNodeIP.ts  store_variables.ts
src/routes/: +page.svelte
src/routes/choose_file_location/: +page.svelte
src/routes/choose_password/: +page.svelte
src/routes/installation_complete/: +page.svelte
src/routes/wallet_info/: +page.svelte
src/routes/wallet_screen/: +page.svelte
