[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6", features = ["api-all"] }

aes = "0.7.0"
block-modes = "0.8.1"
pbkdf2 = "0.12.2"

secp256k1 = { version = "0.27", features = ["rand-std"] }
k256 = { version = "0.13", features = ["ecdsa"] }

hex = "0.4"
rand = "0.8"

reqwest = "0.12.20"

# unit_tests = {path = "./unit_tests"}

[lib]
name = "app"
path = "src/lib.rs"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]

# [workspace]
# resolver = "3"
# members = ["unit_tests"]
